--- a/src/App.css
+++ b/src/App.css
@@ -30,7 +30,6 @@ body {
 }
 
 .form-container {
-  width: auto;
   height: 30rem;
   width: 20rem;
   border-radius: 1rem;
@@ -38,4 +37,22 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+@media screen and (min-width:  480px) {
+  .form-container {
+    width: 30rem;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .form-container {
+    width: 40rem;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .form-container {
+    width: 60rem;
+  }
 }
